# task-tracker-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  _PROJECT_ROADMAP.md  _REFACTOR_PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 02449ec9b4e1_add_index_on_tasks_user_id.py  6db4ca1f4c69_create_users_and_tasks_tables.py
src/task_tracker_api/: Dockerfile  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
src/task_tracker_api/routers/: auth.py  tasks.py
tests/: conftest.py  test_auth.py  test_dependencies.py  test_tasks.py
