[project]
name = "task-tracker-api"
version = "0.1.0"
description = ""
authors = [
    {name = "yasinmorawi",email = "ymorawi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "sqlmodel (>=0.0.39,<0.0.40)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "bcrypt (==4.0.1)"
]

[tool.poetry]
packages = [{include = "task_tracker_api", from = "src"}]

[tool.ruff]
extend-exclude = ["alembic/versions"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]
